updated getRandomPeer to be Javac complient